// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks renders 0 1`] = `
Array [
  .c0 {
  marks: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marks: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marks: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marks: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marks renders function 1`] = `
Array [
  .c0 {
  marks: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marks: has;
}

<div
    className="c0"
  />,
  .c0 {
  marks: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marks: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marks renders invalid theme path 1`] = `
Array [
  .c0 {
  marks: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marks: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marks: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marks: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marks renders negative number 1`] = `
Array [
  .c0 {
  marks: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marks: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marks: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  marks: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marks renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    marks: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marks: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marks: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marks: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    marks: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marks: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marks: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marks: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marks: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marks: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marks: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marks: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marks: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marks: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marks: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marks: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marks renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    marks: July;
  }
}

@media April {
  .c0 {
    marks: August;
  }
}

@media January {
  .c0 {
    marks: September;
  }
}

@media April {
  .c0 {
    marks: November;
  }
}

@media June {
  .c0 {
    marks: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    marks: July;
  }
}

@media April {
  .c0 {
    marks: August;
  }
}

@media January {
  .c0 {
    marks: September;
  }
}

@media April {
  .c0 {
    marks: November;
  }
}

@media June {
  .c0 {
    marks: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marks: January;
  }
}

@media April {
  .c0 {
    marks: December;
  }
}

@media January {
  .c0 {
    marks: April;
  }
}

@media April {
  .c0 {
    marks: May;
  }
}

@media June {
  .c0 {
    marks: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marks: January;
  }
}

@media April {
  .c0 {
    marks: December;
  }
}

@media January {
  .c0 {
    marks: April;
  }
}

@media April {
  .c0 {
    marks: May;
  }
}

@media June {
  .c0 {
    marks: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marks renders postitive number 1`] = `
Array [
  .c0 {
  marks: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marks: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marks: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  marks: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marks renders string 1`] = `
Array [
  .c0 {
  marks: July;
}

<div
    className="c0"
  />,
  .c0 {
  marks: July;
}

<div
    className="c0"
  />,
  .c0 {
  marks: June;
}

<div
    className="c0"
  />,
  .c0 {
  marks: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marks renders valid theme path 1`] = `
Array [
  .c0 {
  marks: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marks: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marks: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marks: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
